[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.0.3"
discord = "^1.7.3"
discord-py-slash-command = "^3.0.3"
bs4 = "^0.0.1"
maya = "^0.6.1"
treelib = "^1.6.1"
pylatexenc = "^2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"